# itmo-algo

./: CMakeLists.txt  input.txt  main.cpp  test.cpp
1/c/: main.cpp
1_lists/A/: main.cpp
1_lists/D/: input.txt  main.cpp
1_lists/b/: main.cpp
1_lists/c/: input.txt
2/C/: input.txt  main.cpp
2/D/: bst-preorder.cpp  in.txt
2/E/: in.txt  parent.cpp
3/A/: main.cpp
3/B/: in.txt  main.cpp
3/C/: in.txt  main.cpp
3/D-cuckoo-hash-map/: main.cpp  out.txt  task.md
3/D-cuckoo-search/: in.txt  main.cpp
4/A/: in.txt  main.cpp
4/B/: main.cpp
4/C/: in.txt  main.cpp
4/D/: in.txt  main.cpp  out.txt
4/E/: in.txt  main.cpp
