cmake_minimum_required(VERSION 3.28)
project(algo)

set(CMAKE_CXX_STANDARD 20)

#add_executable(algo_2c 2/C/main.cpp)
#add_executable(algo_2d 2/D/bst-preorder.cpp)
#add_executable(algo_2e 2/E/parent.cpp)

#3
#add_executable(algo_3A 3/A/main.cpp)
#add_executable(algo_3B 3/B/main.cpp)
#add_executable(algo_3C 3/C/main.cpp)
#add_executable(algo_3D 3/D-cuckoo-hash-map/main.cpp)
add_executable(algo_4A 4/A/main.cpp)
